# cpp_workout

./: CMakeLists.txt
add_big_numbers/: CMakeLists.txt  add_big_numbers.cpp
become_immortal/: CMakeLists.txt  become_immortal.cpp
break_the_pieces/: CMakeLists.txt  break_the_pieces.cpp  break_the_pieces.h  test.cpp
burrows_wheeler_transformation/: CMakeLists.txt  burrows_wheeler_transformation.cpp  notes
docs/: elastic_collision.lyx
drafting/: CMakeLists.txt  test_for_constness.cpp
factorial_tail/: CMakeLists.txt  factorial_tail.cpp  notes
last_digit_of_a_huge_number/: CMakeLists.txt  last_digit_of_a_huge_number.cpp  notes
lift/: CMakeLists.txt  lift.cpp
magic_compare/: CMakeLists.txt  magic_compare.cpp  magic_compare.h  test_magic_compare.cpp
matrix_determinant/: CMakeLists.txt  matrix_determinant.cpp
path_finder/: CMakeLists.txt  minimal_step.cpp  reachable.cpp  the_alpinist.cpp
range_extraction/: CMakeLists.txt  range_extraction.cpp
smallest_possible_sum/: CMakeLists.txt  smallest_possible_sum.cpp
src/: best_travel.cpp  camel_string.cpp  explorsive_sum.cpp  max_sum.cpp  multiplication_of_three.cpp  multiply_string_number.cpp  observed_pin.cpp  parse_int.cpp  pascal_triangle.cpp  pi_comp.cpp  premutation_string.cpp  roman_decoder.cpp  scarmblies_string.cpp  score_a_dice.cpp  stray_number.cpp  string_mix.cpp  sudoku_validator.cpp  twice_linear.cpp  two_sum.cpp
sum_of_intervals/: CMakeLists.txt  sum_of_intervals.cpp
